etch-a-sketch done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
+    <div id="title">
+        <p>Etch-a-sketch</p>
+    </div>
+
+    <div id="grid-size">
+        <button id="button">Change Grid Size</button>
+    </div>
+
     <div id="container">
+    </div>
+
+    <div id="reset">
+        <button id="reset-button">Reset</button>
     </div>
 
 </body>
