--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="styles.css"> 
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div id="title">
-        <p>Etch-a-sketch</p>
+      <p>Etch-a-sketch</p>
     </div>
 
     <div id="grid-size">
-        <button id="button">Change Grid Size</button>
+      <button id="button">Change Grid Size</button>
     </div>
 
-    <div id="container">
-    </div>
+    <div id="container"></div>
 
     <div id="reset">
-        <button id="reset-button">Reset</button>
+      <button id="reset-button">Reset</button>
     </div>
-
-</body>
+  </body>
 </html>
